--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header id="header">
       <div class="inner">
         <nav>
-          <h1 class="logo"><a href="./index.html">창공연구소</a></h1>
+          <h1 class="logo">
+            <a href="./index.html"><i class="hidden">창공연구소</i></a>
+          </h1>
 
           <ul class="gnb">
             <li><a href="./about.html">ABOUT</a></li>
@@ -36,6 +38,12 @@
 
             <li><a href="">디자인 확인</a></li>
           </ul>
+
+          <div class="join-btn">
+            <a href="#"><i class="hidden">검색</i></a>
+            <a href="#"><i class="hidden">로그인</i></a>
+            <a href="#"><i class="hidden">쇼핑</i></a>
+          </div>
         </nav>
       </div>
     </header>
@@ -43,38 +51,59 @@
     <main id="main">
       <section class="visual">
         <a href="">
-          <figure><img src="#" alt="#" /></figure>
+          <figure><img src="./img/visual.jpg" alt="#" /></figure>
         </a>
+      </section>
+
+      <section class="education">
+        <div class="inner">
+          <div class="education-all">
+            <div class="education-con">
+              <h4 class="education-title">EDUCATION</h4>
+              <div class="education-text">
+                <strong>온라인 쇼핑몰 성공 가이드</strong>
+                <p>
+                  온라인 쇼핑몰을 처음하시는 분들 부터 이미 하시면서 방향성을
+                  <br />
+                  잃으신 분들까지 실제 온라인 쇼핑몰 CEO들의 노하우 <br />방향을
+                  잡아드립니다.
+                </p>
+              </div>
+              <a href="" class="more">더보러 가기</a>
+            </div>
+            <figure>
+              <img src="./img/education.jpg" alt="#" />
+            </figure>
+          </div>
+        </div>
       </section>
 
       <section class="contents">
         <div class="inner">
           <div class="con-all">
-            <a class="desing">
+            <a href="#" class="desing">
               <dl>
-                <dt>desing</dt>
-                <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
-                  reiciendis?
-                </dd>
+                <dt>DESIGN</dt>
+                <dd>쇼핑 맞춤 제작 / 상세페이지</dd>
               </dl>
+              <p>
+                공장처럼 찍어내는 디자인이 아닌 브랜드마다의 특색을 살린
+                하나뿐인 디자인
+              </p>
             </a>
-            <a class="marketing">
+
+            <a href="#" class="marketing">
               <dl>
-                <dt>marketing</dt>
-                <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
-                  reiciendis?
-                </dd>
+                <dt>MARKETING</dt>
+                <dd>키워드 광고 / SNS 광고 / 쇼핑 광고</dd>
               </dl>
+              <p>매출 성장을 목표로 컨설팅 해드립니다.</p>
             </a>
-            <a class="analytics">
+
+            <a href="#" class="analytics">
               <dl>
-                <dt>analytics</dt>
-                <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
-                  reiciendis?
-                </dd>
+                <dt>ANALLYTICS</dt>
+                <dd>빅데이터를 분석하고 예측하며 중요한 정보 파악</dd>
               </dl>
             </a>
           </div>
@@ -121,5 +150,86 @@
         </div>
       </section>
     </main>
+
+    <footer id="footer">
+      <div class="inner">
+        <div class="footer-con">
+          <div class="foot-title">
+            <h4 class="foot-logo">
+              <a href="index.html"><i class="hidden">창공연구소</i></a>
+            </h4>
+            <ul class="foot-nav">
+              <li><a href="#">회사 소개</a></li>
+              <li><a href="#">이용약관</a></li>
+              <li><a href="#">개인정보처리방침</a></li>
+              <li><a href="#">이용 안내</a></li>
+            </ul>
+          </div>
+
+          <div class="foot-con">
+            <address>
+              <div class="foot-call">
+                <dl>
+                  <dt>상담 전화</dt>
+                  <dd>0507-1366-4441</dd>
+                </dl>
+                <dl>
+                  <dt>상담 이메일</dt>
+                  <dd>cg-lab@naver.com</dd>
+                </dl>
+                <dl>
+                  <dt>상담채널</dt>
+                  <dd>우측하단</dd>
+                </dl>
+              </div>
+
+              <div class="foot-time">
+                <dl>
+                  <dt>무통장 계좌정보</dt>
+                  <dd>
+                    KB국민은행 757101-04-097374 (예금주 정종실(창공연구소))
+                  </dd>
+                </dl>
+
+                <dl>
+                  <dt>상담 시간</dt>
+                  <dd>
+                    평일 오전10시~오후5시 [점심시간 오후12시~1시] 주말, 공휴일
+                    휴무
+                  </dd>
+                </dl>
+              </div>
+
+              <div class="foot-text">
+                <dl>
+                  <dt>상호명</dt>
+                  <dd>창공연구소</dd>
+                </dl>
+                <dl>
+                  <dt>대표자명</dt>
+                  <dd>정종실</dd>
+                </dl>
+                <dl>
+                  <dt>사업장 주소</dt>
+                  <dd>04563 서울시 중구 장충단로13길 20 11층 D37</dd>
+                </dl>
+                <dl>
+                  <dt>대표 전화</dt>
+                  <dd>0507-1366-4441 사업자 등록번호 202-44-65938</dd>
+                </dl>
+                <dl>
+                  <dt>통신판매업 신고번호</dt>
+                  <dd>2024-서울중구-0413 [사업자정보확인]</dd>
+                </dl>
+                <dl>
+                  <dt>개인정보보호책임자</dt>
+                  <dd>정종실</dd>
+                </dl>
+              </div>
+            </address>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
