--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
     <header id="header">
       <div class="inner">
         <nav>
-          <h1 class="logo"><a href="./index.html">창공연구소</a></h1>
+          <h1 class="logo">
+            <a href="./index.html"><i class="hidden">창공연구소</i></a>
+          </h1>
 
           <ul class="gnb">
             <li><a href="./about.html">ABOUT</a></li>
@@ -36,6 +38,12 @@
 
             <li><a href="">디자인 확인</a></li>
           </ul>
+
+          <div class="join-btn">
+            <a href="#"><i class="hidden">검색</i></a>
+            <a href="#"><i class="hidden">로그인</i></a>
+            <a href="#"><i class="hidden">쇼핑</i></a>
+          </div>
         </nav>
       </div>
     </header>
@@ -137,5 +145,86 @@
         </div>
       </section>
     </main>
+
+    <footer id="footer">
+      <div class="inner">
+        <div class="footer-con">
+          <div class="foot-title">
+            <h4 class="foot-logo">
+              <a href="index.html"><i class="hidden">창공연구소</i></a>
+            </h4>
+            <ul class="foot-nav">
+              <li><a href="#">회사 소개</a></li>
+              <li><a href="#">이용약관</a></li>
+              <li><a href="#">개인정보처리방침</a></li>
+              <li><a href="#">이용 안내</a></li>
+            </ul>
+          </div>
+
+          <div class="foot-con">
+            <address>
+              <div class="foot-call">
+                <dl>
+                  <dt>상담 전화</dt>
+                  <dd>0507-1366-4441</dd>
+                </dl>
+                <dl>
+                  <dt>상담 이메일</dt>
+                  <dd>cg-lab@naver.com</dd>
+                </dl>
+                <dl>
+                  <dt>상담채널</dt>
+                  <dd>우측하단</dd>
+                </dl>
+              </div>
+
+              <div class="foot-time">
+                <dl>
+                  <dt>무통장 계좌정보</dt>
+                  <dd>
+                    KB국민은행 757101-04-097374 (예금주 정종실(창공연구소))
+                  </dd>
+                </dl>
+
+                <dl>
+                  <dt>상담 시간</dt>
+                  <dd>
+                    평일 오전10시~오후5시 [점심시간 오후12시~1시] 주말, 공휴일
+                    휴무
+                  </dd>
+                </dl>
+              </div>
+
+              <div class="foot-text">
+                <dl>
+                  <dt>상호명</dt>
+                  <dd>창공연구소</dd>
+                </dl>
+                <dl>
+                  <dt>대표자명</dt>
+                  <dd>정종실</dd>
+                </dl>
+                <dl>
+                  <dt>사업장 주소</dt>
+                  <dd>04563 서울시 중구 장충단로13길 20 11층 D37</dd>
+                </dl>
+                <dl>
+                  <dt>대표 전화</dt>
+                  <dd>0507-1366-4441 사업자 등록번호 202-44-65938</dd>
+                </dl>
+                <dl>
+                  <dt>통신판매업 신고번호</dt>
+                  <dd>2024-서울중구-0413 [사업자정보확인]</dd>
+                </dl>
+                <dl>
+                  <dt>개인정보보호책임자</dt>
+                  <dd>정종실</dd>
+                </dl>
+              </div>
+            </address>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
