--- a/index.html
+++ b/index.html
@@ -44,15 +44,21 @@
             <a href="#"><i class="hidden">로그인</i></a>
             <a href="#"><i class="hidden">쇼핑</i></a>
           </div>
+
+          <div class="mo-btn">
+            <a href=""><i class="hidden">더보기</i></a>
+          </div>
         </nav>
       </div>
     </header>
 
     <main id="main">
       <section class="visual">
+        <!-- <div class="inner"> -->
         <a href="">
-          <figure><img src="./img/visual.jpg" alt="#" /></figure>
+          <!-- <figure><img src="./img/visual.jpg" alt="#" /></figure> -->
         </a>
+        <!-- </div> -->
       </section>
 
       <section class="education">
@@ -80,33 +86,39 @@
 
       <section class="contents">
         <div class="inner">
-          <div class="con-all">
-            <a href="#" class="desing">
-              <dl>
-                <dt>DESIGN</dt>
-                <dd>쇼핑 맞춤 제작 / 상세페이지</dd>
-              </dl>
-              <p>
-                공장처럼 찍어내는 디자인이 아닌 브랜드마다의 특색을 살린
-                하나뿐인 디자인
-              </p>
-            </a>
+          <ul class="con-all">
+            <li>
+              <a href="#">
+                <dl>
+                  <dt>DESIGN</dt>
+                  <dd>쇼핑 맞춤 제작 / 상세페이지</dd>
+                </dl>
+                <p>
+                  공장처럼 찍어내는 디자인이 아닌 브랜드마다의 특색을 살린
+                  하나뿐인 디자인
+                </p>
+              </a>
+            </li>
 
-            <a href="#" class="marketing">
-              <dl>
-                <dt>MARKETING</dt>
-                <dd>키워드 광고 / SNS 광고 / 쇼핑 광고</dd>
-              </dl>
-              <p>매출 성장을 목표로 컨설팅 해드립니다.</p>
-            </a>
+            <li>
+              <a href="#">
+                <dl>
+                  <dt>MARKETING</dt>
+                  <dd>키워드 광고 / SNS 광고 / 쇼핑 광고</dd>
+                </dl>
+                <p>매출 성장을 목표로 컨설팅 해드립니다.</p>
+              </a>
+            </li>
 
-            <a href="#" class="analytics">
-              <dl>
-                <dt>ANALLYTICS</dt>
-                <dd>빅데이터를 분석하고 예측하며 중요한 정보 파악</dd>
-              </dl>
-            </a>
-          </div>
+            <li>
+              <a href="#">
+                <dl>
+                  <dt>ANALLYTICS</dt>
+                  <dd>빅데이터를 분석하고 예측하며 중요한 정보 파악</dd>
+                </dl>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -125,8 +137,6 @@
               </div>
             </div>
             <div class="map-wrap">
-              <!-- * 카카오맵 - 지도퍼가기 -->
-              <!-- 1. 지도 노드 -->
               <div
                 id="daumRoughmapContainer1734592229954"
                 class="root_daum_roughmap root_daum_roughmap_landing"
@@ -136,7 +146,7 @@
                 class="daum_roughmap_loader_script"
                 src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"
               ></script>
-              <!-- 3. 실행 스크립트 -->
+
               <script charset="UTF-8">
                 new daum.roughmap.Lander({
                   timestamp: "1734592229954",
@@ -144,6 +154,7 @@
                   mapWidth: "900",
                   mapHeight: "550",
                 }).render();
+                window.addEventListener("resize", resizeMap);
               </script>
             </div>
           </div>
@@ -177,10 +188,6 @@
                   <dt>상담 이메일</dt>
                   <dd>cg-lab@naver.com</dd>
                 </dl>
-                <dl>
-                  <dt>상담채널</dt>
-                  <dd>우측하단</dd>
-                </dl>
               </div>
 
               <div class="foot-time">
@@ -201,30 +208,10 @@
               </div>
 
               <div class="foot-text">
-                <dl>
-                  <dt>상호명</dt>
-                  <dd>창공연구소</dd>
-                </dl>
-                <dl>
-                  <dt>대표자명</dt>
-                  <dd>정종실</dd>
-                </dl>
-                <dl>
-                  <dt>사업장 주소</dt>
-                  <dd>04563 서울시 중구 장충단로13길 20 11층 D37</dd>
-                </dl>
-                <dl>
-                  <dt>대표 전화</dt>
-                  <dd>0507-1366-4441 사업자 등록번호 202-44-65938</dd>
-                </dl>
-                <dl>
-                  <dt>통신판매업 신고번호</dt>
-                  <dd>2024-서울중구-0413 [사업자정보확인]</dd>
-                </dl>
-                <dl>
-                  <dt>개인정보보호책임자</dt>
-                  <dd>정종실</dd>
-                </dl>
+                <p>대표자 : 정종실</p>
+                <p>주소 : 서울시 중구 장충단로13길 20 11층 D37</p>
+                <p>사업자 등록번호 : 202-44-65938</p>
+                <p>통신판매업 신고번호 : 2024-서울중구-0413</p>
               </div>
             </address>
           </div>
