--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </div>
             </div>
             <div class="map-wrap">
-              <!-- <div
+              <div
                 id="daumRoughmapContainer1734592229954"
                 class="root_daum_roughmap root_daum_roughmap_landing"
               ></div>
@@ -155,7 +155,7 @@
                   mapHeight: "550",
                 }).render();
                 window.addEventListener("resize", resizeMap);
-              </script> -->
+              </script>
             </div>
           </div>
         </div>
