--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
               <li>
                 <a href="./education.html">EDUCATION</a>
                 <ul class="submenu">
-                  <li><a href="">DESIGN</a></li>
-                  <li><a href="">MARKETING</a></li>
+                  <li><a href="./design.html">DESIGN</a></li>
+                  <li><a href="./marketing.html">MARKETING</a></li>
                   <li><a href="">ANALYTICS</a></li>
                 </ul>
               </li>
               <li>
-                <a href="">쇼츠</a>
+                <a href="./shorts.html">쇼츠</a>
                 <ul class="submenu">
                   <li><a href="">유튜브쇼핑</a></li>
                   <li><a href="">클래스</a></li>
