--- a/education.html
+++ b/education.html
@@ -31,19 +31,19 @@
               <li>
                 <a href="./education.html">EDUCATION</a>
                 <ul class="submenu">
-                  <li><a href="">DESIGN</a></li>
-                  <li><a href="">MARKETING</a></li>
+                  <li><a href="./design.html">DESIGN</a></li>
+                  <li><a href="./marketing.html">MARKETING</a></li>
                   <li><a href="">ANALYTICS</a></li>
                 </ul>
               </li>
               <li>
-                <a href="">쇼츠</a>
+                <a href="./shorts.html">쇼츠</a>
                 <ul class="submenu">
                   <li><a href="">유튜브쇼핑</a></li>
                   <li><a href="">클래스</a></li>
                 </ul>
               </li>
-              <li><a href="">디자인 확인</a></li>
+              <li><a href="./check.html">디자인 확인</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -291,30 +291,31 @@
 
       <section class="lecture">
         <div class="inner">
-          <div class="new">
-            <h3>현재 모집중인 과정</h3>
-            <iframe
-              src="https://airtable.com/embed/shrEHdun5EvyOwsdy?backgroundColor=blue"
-              frameborder="0"
-              onmousewheel=""
-              width="98%"
-              height="600"
-              style="background: transparent; border: 0"
-              class="airtable-embed"
-            ></iframe>
-          </div>
-
-          <div class="old">
-            <h3>최근 개설 과정</h3>
-            <iframe
-              src="https://airtable.com/embed/shr3t6mJcz9og4JEx?backgroundColor=blue"
-              frameborder="0"
-              onmousewheel=""
-              width="98%"
-              height="600"
-              style="background: transparent; border: 0"
-              class="airtable-embed"
-            ></iframe>
+          <div class="lecture-all">
+            <div class="new">
+              <h3>현재 모집중인 과정</h3>
+              <iframe
+                src="https://airtable.com/embed/shrEHdun5EvyOwsdy?backgroundColor=blue"
+                frameborder="0"
+                onmousewheel=""
+                width="98%"
+                height="600"
+                style="background: transparent; border: 0"
+                class="airtable-embed"
+              ></iframe>
+            </div>
+            <div class="old">
+              <h3>최근 개설 과정</h3>
+              <iframe
+                src="https://airtable.com/embed/shr3t6mJcz9og4JEx?backgroundColor=blue"
+                frameborder="0"
+                onmousewheel=""
+                width="98%"
+                height="600"
+                style="background: transparent; border: 0"
+                class="airtable-embed"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
