--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
               <li>
                 <a href="./education.html">EDUCATION</a>
                 <ul class="submenu">
-                  <li><a href="">DESIGN</a></li>
-                  <li><a href="">MARKETING</a></li>
+                  <li><a href="./design.html">DESIGN</a></li>
+                  <li><a href="./marketing.html">MARKETING</a></li>
                   <li><a href="">ANALYTICS</a></li>
                 </ul>
               </li>
               <li>
-                <a href="">쇼츠</a>
+                <a href="./shorts.html">쇼츠</a>
                 <ul class="submenu">
                   <li><a href="">유튜브쇼핑</a></li>
                   <li><a href="">클래스</a></li>
                 </ul>
               </li>
-              <li><a href="">디자인 확인</a></li>
+              <li><a href="./check.html">디자인 확인</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -135,45 +135,6 @@
               </a>
             </li>
           </ul>
-        </div>
-      </section>
-
-      <section class="map">
-        <div class="inner">
-          <div class="map-con">
-            <div class="map-text">
-              <strong class="map-title">창공연구소</strong>
-              <div class="map-text1">
-                <p>고객 여러분을 따뜻하게 맞이하고</p>
-                <p>디지털 커머스를 위한 맞춤형 컨설팅을 제공해드립니다.</p>
-              </div>
-              <div class="map-text2">
-                <p>운영시간 : 평일 09:00-18:00</p>
-                <p>서울특별시 중구 장충단로13길 20, 11층 D37호</p>
-              </div>
-            </div>
-            <div class="map-wrap">
-              <div
-                id="daumRoughmapContainer1734592229954"
-                class="root_daum_roughmap root_daum_roughmap_landing"
-              ></div>
-              <script
-                charset="UTF-8"
-                class="daum_roughmap_loader_script"
-                src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"
-              ></script>
-
-              <script charset="UTF-8">
-                new daum.roughmap.Lander({
-                  timestamp: "1734592229954",
-                  key: "2mjpr",
-                  mapWidth: "900",
-                  mapHeight: "550",
-                }).render();
-                window.addEventListener("resize", resizeMap);
-              </script>
-            </div>
-          </div>
         </div>
       </section>
     </main>
