페이지 진행중

--- a/analytics.html
+++ b/analytics.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/analytics.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -31,20 +31,10 @@
               <li><a href="./about.html">ABOUT</a></li>
               <li>
                 <a href="./education.html">EDUCATION</a>
-                <ul class="submenu">
-                  <li><a href="./design.html">DESIGN</a></li>
-                  <li><a href="./marketing.html">MARKETING</a></li>
-                  <li><a href="">ANALYTICS</a></li>
-                </ul>
               </li>
-              <li>
-                <a href="./shorts.html">쇼츠</a>
-                <ul class="submenu">
-                  <li><a href="">유튜브쇼핑</a></li>
-                  <li><a href="">클래스</a></li>
-                </ul>
-              </li>
-              <li><a href="./check.html">디자인 확인</a></li>
+              <li><a href="./design.html">DESIGN</a></li>
+              <li><a href="./marketing.html">MARKETING</a></li>
+              <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -62,13 +52,30 @@
     <div id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>디자인 확인</h2>
+          <h2>ANALYTICS</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora,
-            distinctio.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime,
+            at.
           </p>
         </div>
         <figure><img src="./img/visual-2-1.jpg" alt="#" /></figure>
+      </section>
+
+      <section class="information">
+        <div class="inner">
+          <div class="information-con">
+            <div class="information-title">
+              <p>ANALYTICS</p>
+              <h3>중요한 정보 파악하기</h3>
+            </div>
+            <ul class="information-list">
+              <li>고객님 중심의 측정을 실행</li>
+              <li>더 스마트한 통계를 활용해 ROI를 개선</li>
+              <li>분석 정보를 활용하영 실적 개선</li>
+              <li>효과적인 데이터 활용</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </div>
 
