--- a/design.html
+++ b/design.html
@@ -31,20 +31,10 @@
               <li><a href="./about.html">ABOUT</a></li>
               <li>
                 <a href="./education.html">EDUCATION</a>
-                <ul class="submenu">
-                  <li><a href="./design.html">DESIGN</a></li>
-                  <li><a href="./marketing.html">MARKETING</a></li>
-                  <li><a href="">ANALYTICS</a></li>
-                </ul>
               </li>
-              <li>
-                <a href="./shorts.html">쇼츠</a>
-                <ul class="submenu">
-                  <li><a href="">유튜브쇼핑</a></li>
-                  <li><a href="">클래스</a></li>
-                </ul>
-              </li>
-              <li><a href="./check.html">디자인 확인</a></li>
+              <li><a href="./design.html">DESIGN</a></li>
+              <li><a href="./marketing.html">MARKETING</a></li>
+              <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -84,6 +74,50 @@
             <li><i>디자인</i></li>
             <li><i>사진촬영</i></li>
           </ul>
+        </div>
+      </section>
+
+      <section class="price">
+        <div class="inner">
+          <div class="price-title">
+            <h3>견적 안내</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+
+          <div class="price-all">
+            <div class="typ">
+              <dl class="price-card-title">
+                <dt>기획 + 디자인</dt>
+                <dd>Lorem ipsum dolor sit amet.</dd>
+              </dl>
+              <ul class="price-card">
+                <li>
+                  <p>1. 가로 1000px 기준 + 세로 15000px 미만</p>
+                  <strong>80만원</strong>
+                </li>
+                <li>
+                  <p>2.가로 1000px 기준 + 세로 1500px ~ 30000px 미만</p>
+                  <strong>90만원 ~ 280만원</strong>
+                </li>
+              </ul>
+            </div>
+            <div class="typ">
+              <dl class="price-card-title">
+                <dt>촬영 + 기획 + 디자인</dt>
+                <dd>Lorem ipsum dolor sit amet.</dd>
+              </dl>
+              <ul class="price-card">
+                <li>
+                  <p>1. 가로 1000px 기준 + 세로 15000px 미만</p>
+                  <strong>100만원</strong>
+                </li>
+                <li>
+                  <p>2.가로 1000px 기준 + 세로 1500px ~ 30000px 미만</p>
+                  <strong>120만원 ~ 330만원</strong>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -176,49 +210,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="price">
-        <div class="inner">
-          <div class="price-title">
-            <h3>견적 안내</h3>
-            <p>1.유형 2.유형</p>
-          </div>
-          <ul class="price-card">
-            <li>
-              <div class="price-card-title">
-                <strong>기획 + 디자인</strong>
-                <p>사진이 있으신 고객분들에게 적합합니다.</p>
-              </div>
-              <div class="price-card-con">
-                <dl class="type-1">
-                  <dt>유형 1</dt>
-                  <dd>80만원</dd>
-                </dl>
-                <dl class="type-2">
-                  <dt>유형 2</dt>
-                  <dd>90~280만원</dd>
-                </dl>
-              </div>
-            </li>
-            <li>
-              <div class="price-card-title">
-                <strong>촬영 + 기획 + 디자인</strong>
-                <p>사진 촬영부터 디자인 까지 모든걸 한번에 해결 가능합니다.</p>
-              </div>
-              <div class="price-card-con">
-                <dl class="type-1">
-                  <dt>유형 1</dt>
-                  <dd>100만원</dd>
-                </dl>
-                <dl class="type-2">
-                  <dt>유형 2</dt>
-                  <dd>120~330만원</dd>
-                </dl>
-              </div>
-            </li>
-          </ul>
         </div>
       </section>
     </div>
