--- a/education.html
+++ b/education.html
@@ -30,20 +30,10 @@
               <li><a href="./about.html">ABOUT</a></li>
               <li>
                 <a href="./education.html">EDUCATION</a>
-                <ul class="submenu">
-                  <li><a href="./design.html">DESIGN</a></li>
-                  <li><a href="./marketing.html">MARKETING</a></li>
-                  <li><a href="">ANALYTICS</a></li>
-                </ul>
               </li>
-              <li>
-                <a href="./shorts.html">쇼츠</a>
-                <ul class="submenu">
-                  <li><a href="">유튜브쇼핑</a></li>
-                  <li><a href="">클래스</a></li>
-                </ul>
-              </li>
-              <li><a href="./check.html">디자인 확인</a></li>
+              <li><a href="./design.html">DESIGN</a></li>
+              <li><a href="./marketing.html">MARKETING</a></li>
+              <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -133,7 +123,7 @@
       <section class="service">
         <div class="inner">
           <div class="sev-con">
-            <a href="#" class="service-btn">수강신청 하기</a>
+            <a href="#" class="service-btn">문의하기</a>
             <dl>
               <dt>무엇이든 편하게 문의하세요.</dt>
               <dd>창공연구소</dd>
@@ -153,7 +143,7 @@
                 <div class="swiper-slide">
                   <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
                   <dl>
-                    <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
+                    <dt>카페24, 스마트스토어, <br />메타버스, 빅데이터분석</dt>
                     <dd>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Mollitia, totam!
@@ -193,7 +183,7 @@
                 <div class="swiper-slide">
                   <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
                   <dl>
-                    <dt>이커머스 운영전략, 빅데이터 분석, 로그 분석</dt>
+                    <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
                     <dd>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Mollitia, totam!
@@ -203,13 +193,12 @@
               </div>
 
               <div class="curriculum-pagination swiper-pagination"></div>
-
-              <div class="curriculum-button-prev swiper-button-prev-1">
-                <i class="hidden">이전</i>
-              </div>
-              <div class="curriculum-button-next swiper-button-next-1">
-                <i class="hidden">다음</i>
-              </div>
+            </div>
+            <div class="curriculum-button-prev swiper-button-prev-1">
+              <i class="hidden">이전</i>
+            </div>
+            <div class="curriculum-button-next swiper-button-next-1">
+              <i class="hidden">다음</i>
             </div>
           </div>
         </div>
@@ -233,7 +222,7 @@
               <div class="swiper-slide">
                 <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
                 <dl>
-                  <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
+                  <dt>카페24, 스마트스토어, <br />메타버스, 빅데이터분석</dt>
                   <dd>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia, totam!
@@ -273,7 +262,7 @@
               <div class="swiper-slide">
                 <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
                 <dl>
-                  <dt>이커머스 운영전략, 빅데이터 분석, 로그 분석</dt>
+                  <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
                   <dd>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Mollitia, totam!
