--- a/marketing.html
+++ b/marketing.html
@@ -31,20 +31,10 @@
               <li><a href="./about.html">ABOUT</a></li>
               <li>
                 <a href="./education.html">EDUCATION</a>
-                <ul class="submenu">
-                  <li><a href="./design.html">DESIGN</a></li>
-                  <li><a href="./marketing.html">MARKETING</a></li>
-                  <li><a href="">ANALYTICS</a></li>
-                </ul>
               </li>
-              <li>
-                <a href="./shorts.html">쇼츠</a>
-                <ul class="submenu">
-                  <li><a href="">유튜브쇼핑</a></li>
-                  <li><a href="">클래스</a></li>
-                </ul>
-              </li>
-              <li><a href="./check.html">디자인 확인</a></li>
+              <li><a href="./design.html">DESIGN</a></li>
+              <li><a href="./marketing.html">MARKETING</a></li>
+              <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
@@ -75,9 +65,10 @@
         <div class="inner">
           <h3 class="sec-title">ADVERTISING</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda
-            repellendus magni ab, numquam molestiae velit quo accusamus saepe
-            facilis iure!
+            어떤 광고부터 해야될지 막막하신가요? 브랜드에 맞춘 가장 합리적이고
+            <br />
+            효과적인 광고를 제안하고 함께 만들어 적합하고 합리적인 광고를 제안해
+            드립니다.
           </p>
 
           <ul class="intor-list">
@@ -109,8 +100,8 @@
 
       <section class="question">
         <div class="inner">
-          <!-- <h4 class="question-title">자주 묻는 질문</h4> -->
-          <!-- ul.question-list>li*4>strong+.answer-wrap>p -->
+          <h4 class="question-title">마케팅의 종류</h4>
+
           <ul class="question-list">
             <li>
               <strong>키워드 광고</strong>
