--- a/index.html
+++ b/index.html
@@ -29,20 +29,10 @@
               <li><a href="./about.html">ABOUT</a></li>
               <li>
                 <a href="./education.html">EDUCATION</a>
-                <ul class="submenu">
-                  <li><a href="./design.html">DESIGN</a></li>
-                  <li><a href="./marketing.html">MARKETING</a></li>
-                  <li><a href="">ANALYTICS</a></li>
-                </ul>
               </li>
-              <li>
-                <a href="./shorts.html">쇼츠</a>
-                <ul class="submenu">
-                  <li><a href="">유튜브쇼핑</a></li>
-                  <li><a href="">클래스</a></li>
-                </ul>
-              </li>
-              <li><a href="./check.html">디자인 확인</a></li>
+              <li><a href="./design.html">DESIGN</a></li>
+              <li><a href="./marketing.html">MARKETING</a></li>
+              <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
             <div class="join-btn">
               <a href="#"><i class="hidden">검색</i></a>
