--- a/analytics.html
+++ b/analytics.html
@@ -77,6 +77,35 @@
           </div>
         </div>
       </section>
+
+      <!-- <section class="app">
+        <div class="inner">
+          <ul class="app-list">
+            <dl>
+              <dt>Google Ads</dt>
+              <dd>Lorem ipsum dolor sit amet.</dd>
+            </dl>
+            <dl>
+
+              <dt>Display & Video 360</dt>
+              <dd>Lorem ipsum dolor sit amet.</dd>
+            </dl>
+            <dl>
+
+              <dt>Search Ads 360</dt>
+              <dd>Lorem ipsum dolor sit amet.</dd>
+            </dl>
+            <dl>
+              <dt>Google Cloud</dt>
+              <dd>Lorem ipsum dolor sit amet.</dd>
+            </dl>
+            <dl>
+              <dt>Google Search Console</dt>
+              <dd>Lorem ipsum dolor sit amet.</dd>
+            </dl>
+          </ul>
+        </div>
+      </section> -->
     </div>
 
     <footer id="footer">
