--- a/marketing.html
+++ b/marketing.html
@@ -100,7 +100,7 @@
 
       <section class="question">
         <div class="inner">
-          <h4 class="question-title">마케팅의 종류</h4>
+          <h4 class="question-title">마케팅</h4>
 
           <ul class="question-list">
             <li>
