--- a/education.html
+++ b/education.html
@@ -51,7 +51,7 @@
     <main id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>EDUCATION</h2>
+          <h2>CEO 종합반</h2>
           <p>
             온라인 쇼핑몰을 처음 하시는 분들부터 실제 CEO의 노하우를 통해 방향을
             잡아드리며, 많은 수강생과 다양한 프로젝트를 진행하여 창공연구소와
@@ -201,16 +201,6 @@
               <i class="hidden">다음</i>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="introduction">
-        <div class="inner">
-          <h3>창공연구소 강사진</h3>
-          <p>
-            창공연구소와 강사진은 100% 실제 운영중인 전문가들로 구성되어
-            있습니다.
-          </p>
         </div>
       </section>
 
