--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
       </div>
     </footer>
 
-    <button class="btn"><i class="hidden">고객센터</i></button>
+    <a class="btn" href="https://cglab.channel.io/home"
+      ><i class="hidden">고객센터</i></a
+    >
   </body>
 </html>
