--- a/analytics.html
+++ b/analytics.html
@@ -166,6 +166,8 @@
       </div>
     </footer>
 
-    <button class="btn"><i class="hidden">고객센터</i></button>
+    <a class="btn" href="https://cglab.channel.io/home"
+      ><i class="hidden">고객센터</i></a
+    >
   </body>
 </html>
