--- a/education.html
+++ b/education.html
@@ -442,5 +442,9 @@
         </div>
       </div>
     </footer>
+
+    <a class="btn" href="https://cglab.channel.io/home"
+      ><i class="hidden">고객센터</i></a
+    >
   </body>
 </html>
