--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </div>
           </div>
         </div>
-        <div class="visual-pagination swiper-pagination"></div>
+        <!-- <div class="visual-pagination swiper-pagination"></div>
 
         <div class="swiper-button-prev-1"><i class="hidden">이전</i></div>
-        <div class="swiper-button-next-1"><i class="hidden">다음</i></div>
+        <div class="swiper-button-next-1"><i class="hidden">다음</i></div> -->
       </section>
 
       <section class="education">
