--- a/design.html
+++ b/design.html
@@ -215,7 +215,7 @@
               <a href="index.html"><i class="hidden">창공연구소</i></a>
             </h4>
             <ul class="foot-nav">
-              <li><a href="#">회사 소개</a></li>
+              <li><a href="./about.html">회사 소개</a></li>
               <li><a href="#">이용약관</a></li>
               <li><a href="#">개인정보처리방침</a></li>
               <li><a href="#">이용 안내</a></li>
